--- a/charts/controller/crds/deployments.plural.sh_stackdefinitions.yaml
+++ b/charts/controller/crds/deployments.plural.sh_stackdefinitions.yaml
@@ -153,6 +153,10 @@ spec:
                   terraform:
                     description: Terraform configuration for this stack.
                     properties:
+                      approveEmpty:
+                        description: ApproveEmpty is whether to auto-approve a plan
+                          if there are no changes, preventing a stack from being blocked.
+                        type: boolean
                       parallelism:
                         description: |-
                           Parallelism is the number of concurrent operations to run,
