--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -10,6 +10,12 @@
   publisher: AccuKnox
 - name: adot
   versions:
+  - version: v0.141.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
   - version: v0.131.0-eksbuild.1
     compatibilities:
     - '1.33'
@@ -3707,6 +3713,16 @@
   publisher: eks
 - name: cribl_cribledge
   versions:
+  - version: v4.15.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v4.14.1-eksbuild.1
     compatibilities:
     - '1.32'
@@ -7519,6 +7535,14 @@
   publisher: Upwind Security
 - name: vpc-cni
   versions:
+  - version: v1.21.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.21.0-eksbuild.4
     compatibilities:
     - '1.34'
