--- a/static/compatibilities/amazon-vpc-cni-k8s.yaml
+++ b/static/compatibilities/amazon-vpc-cni-k8s.yaml
@@ -8,6 +8,7 @@ versions:
   requirements: []
   incompatibilities: []
   summary: null
+  chart_version: 1.21.1
 - version: 1.21.0
   kube: ['1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23']
   requirements: []
