--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -4,7 +4,7 @@ release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
 versions:
 - version: 3.2.2
-  kube: ['1.25', '1.24', '1.23']
+  kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
   summary:
@@ -19,7 +19,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.2']
 - version: 3.2.1
-  kube: ['1.25', '1.24', '1.23']
+  kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
   summary:
@@ -35,7 +35,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.1']
 - version: 3.2.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
@@ -65,8 +65,27 @@ versions:
   chart_version: 9.1.4
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.0']
+- version: 3.1.1
+  kube: ['1.34', '1.33', '1.32']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: [No Helm chart-specific changelog was provided in the notes you
+        pasted; the v3.1.1 notes are application release notes only., "If you are\
+        \ upgrading via Helm, verify the argo-cd Helm chart version that corresponds\
+        \ to app v3.1.1 and review that chart\u2019s CHANGELOG for values/schema changes,\
+        \ hook/job changes, and CRD handling."]
+    features: [No new user-facing features called out for v3.1.1; this is a patch
+        release focused on fixes and small manifest tweaks., Manifests add OCI-related
+        environment variables (helps OCI/registry integrations when using upstream
+        install manifests).]
+    breaking_changes: []
+  chart_version: 8.3.3
+  images: ['ecr-public.aws.com/docker/library/redis:7.2.8-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
+    'quay.io/argoproj/argocd:v3.1.1']
 - version: 3.1.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
   summary:
@@ -97,7 +116,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:7.2.8-alpine', 'ghcr.io/dexidp/dex:v2.43.1',
     'quay.io/argoproj/argocd:v3.1.0']
 - version: 3.0.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
   summary:
@@ -143,16 +162,45 @@ versions:
   chart_version: 8.0.1
   images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
     'quay.io/argoproj/argocd:v3.0.0']
+- version: 2.14.11
+  kube: ['1.33', '1.32', '1.31']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ['Hydrator: webhook handling now understands `sourceHydrator` fields,
+        improving support for hydration workflows triggered via webhooks.']
+    breaking_changes: []
+  chart_version: 7.9.1
+  images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
+    'quay.io/argoproj/argocd:v2.14.11']
 - version: 2.14.1
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 7.8.0
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.2-alpine',
     'quay.io/argoproj/argocd:v2.14.1']
+- version: 2.13.2
+  kube: ['1.32', '1.31', '1.30']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ['(v2.13.0) UI extensions: Argo CD now supports configuring extensions
+        individually, allowing per-extension settings rather than a single shared
+        config.', '(v2.13.0) Self-heal exponential backoff: self-heal retries can
+        use an exponential backoff between attempts to reduce thrash during repeated
+        drift.']
+    breaking_changes: []
+  chart_version: 7.7.12
+  images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
+    'quay.io/argoproj/argocd:v2.13.2']
 - version: 2.13.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   summary:
@@ -169,7 +217,7 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.0']
 - version: 2.12.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   summary:
@@ -185,15 +233,23 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.12.0']
 - version: 2.11.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 6.9.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.11.0']
+- version: 2.10.7
+  kube: ['1.30', '1.29', '1.28']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 6.7.15
+  images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
+    'quay.io/argoproj/argocd:v2.10.7']
 - version: 2.10.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
   summary:
@@ -224,8 +280,16 @@ versions:
   chart_version: 6.0.13
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.0.15-alpine',
     'quay.io/argoproj/argocd:v2.10.0']
+- version: 2.9.4
+  kube: ['1.29', '1.28', '1.27']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 5.53.1
+  images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
+    'quay.io/argoproj/argocd:v2.9.4']
 - version: 2.9.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   summary:
@@ -255,7 +319,7 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.0']
 - version: 2.8.4
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   summary:
