--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -4,7 +4,7 @@ release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
 versions:
 - version: 3.2.2
-  kube: ['1.25', '1.24', '1.23']
+  kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
   summary:
@@ -19,7 +19,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.2']
 - version: 3.2.1
-  kube: ['1.25', '1.24', '1.23']
+  kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
   summary:
@@ -35,7 +35,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.1']
 - version: 3.2.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
@@ -65,8 +65,27 @@ versions:
   chart_version: 9.1.4
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
     'quay.io/argoproj/argocd:v3.2.0']
+- version: 3.1.1
+  kube: ['1.34', '1.33', '1.32']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: ['No Helm chart changelog was provided in the notes you pasted,
+        so I can''t confirm any chart/values changes between the Helm chart versions
+        for 3.1.0 -> 3.1.1.', The only manifest-level change explicitly called out
+        for 3.1.1 is adding OCI environment variables to the upstream manifests (may
+        affect the helm chart if it templates similar env vars).]
+    features: [No new user-facing features were called out for v3.1.1; it is primarily
+        a bugfix patch release., 'Operationally relevant: upstream manifests now include
+        OCI-related environment variables, which may make OCI/registry behavior more
+        consistent if you use OCI support.']
+    breaking_changes: []
+  chart_version: 8.3.3
+  images: ['ecr-public.aws.com/docker/library/redis:7.2.8-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
+    'quay.io/argoproj/argocd:v3.1.1']
 - version: 3.1.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
   summary:
@@ -97,7 +116,7 @@ versions:
   images: ['ecr-public.aws.com/docker/library/redis:7.2.8-alpine', 'ghcr.io/dexidp/dex:v2.43.1',
     'quay.io/argoproj/argocd:v3.1.0']
 - version: 3.0.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
   summary:
@@ -143,16 +162,51 @@ versions:
   chart_version: 8.0.1
   images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
     'quay.io/argoproj/argocd:v3.0.0']
-- version: 2.14.1
-  kube: ['1.35', '1.34', '1.33']
+- version: 2.14.11
+  kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ['Hydrator: webhook handling now correctly processes `sourceHydrator`
+        fields, improving GitOps hydration workflows and reducing missed webhook-triggered
+        updates.']
+    breaking_changes: []
+  chart_version: 7.9.1
+  images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
+    'quay.io/argoproj/argocd:v2.14.11']
+- version: 2.14.1
+  kube: ['1.32', '1.31', '1.30']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ["Mostly bugfix/stability improvements between 2.13.2 and 2.14.1 based\
+        \ on the notes you provided (2.13.2 details; 2.14.1 page doesn\u2019t list\
+        \ individual items here)."]
+    breaking_changes: []
   chart_version: 7.8.0
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.2-alpine',
     'quay.io/argoproj/argocd:v2.14.1']
+- version: 2.13.2
+  kube: ['1.32', '1.31', '1.30']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: ['v2.13.0: Allows configuring Argo CD UI extensions with individual
+        per-extension configs, rather than a single shared config.', 'v2.13.0: Adds
+        exponential backoff between self-heal attempts to reduce thrashing during
+        repeated drift corrections.']
+    breaking_changes: []
+  chart_version: 7.7.12
+  images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
+    'quay.io/argoproj/argocd:v2.13.2']
 - version: 2.13.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   summary:
@@ -169,7 +223,7 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.0']
 - version: 2.12.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   summary:
@@ -185,15 +239,23 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.12.0']
 - version: 2.11.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 6.9.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.11.0']
+- version: 2.10.7
+  kube: ['1.30', '1.29', '1.28']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 6.7.15
+  images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
+    'quay.io/argoproj/argocd:v2.10.7']
 - version: 2.10.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
   summary:
@@ -224,8 +286,34 @@ versions:
   chart_version: 6.0.13
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.0.15-alpine',
     'quay.io/argoproj/argocd:v2.10.0']
+- version: 2.9.4
+  kube: ['1.29', '1.28', '1.27']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: ["Argo CD 2.9.0 \u2192 2.9.4 is a patch-level upgrade within the\
+        \ 2.9 minor line; focus is on bug fixes plus a security fix in 2.9.4.", v2.9.4
+        includes a security advisory fix (GHSA-92mw-q256-5vwg) and explicitly notes
+        a *breaking API change* tied to that fix., 'v2.9.4 has a known issue: the
+        security patch causes major UI problems; upstream says the fix will be in
+        2.9.5.', 'Additional notable changes in 2.9.x included updates to k8s client-go,
+        git libraries, Redis image version, kustomize/helm toolchain bumps, and various
+        controller/appset behavioral fixes.']
+    features: ['PKCE authentication flow for web logins (OIDC) was added in 2.9.x,
+        which may affect/benefit SSO setups.', 'ApplicationSet gained enhancements
+        such as ignoreApplicationDifferences, additional generators/webhook support
+        (e.g., Azure DevOps/GitLab SCM improvements), and various reconciliation behavior
+        improvements.', Operational improvements include retry logic in Kubernetes
+        client usage and less aggressive sync state behavior during repo errors.]
+    breaking_changes: [2.9.4 security fix (GHSA-92mw-q256-5vwg) includes a breaking
+        API change; you must read the advisory and validate any API clients/automations
+        before upgrading.]
+  chart_version: 5.53.1
+  images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
+    'quay.io/argoproj/argocd:v2.9.4']
 - version: 2.9.0
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   summary:
@@ -255,7 +343,7 @@ versions:
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.0']
 - version: 2.8.4
-  kube: ['1.35', '1.34', '1.33']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   summary:
