--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -303,6 +303,15 @@
     - '1.30'
     - '1.29'
     - '1.28'
+  - version: v4.8.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
   - version: v4.7.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -2869,6 +2878,11 @@
   publisher: s3
 - name: aws-network-flow-monitoring-agent
   versions:
+  - version: v1.1.2-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
   - version: v1.1.1-eksbuild.1
     compatibilities:
     - '1.34'
@@ -3041,6 +3055,14 @@
   publisher: Catalogic Software
 - name: cert-manager
   versions:
+  - version: v1.19.2-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.19.1-eksbuild.3
     compatibilities:
     - '1.34'
@@ -3076,6 +3098,14 @@
     - '1.30'
     - '1.29'
     - '1.28'
+  - version: v1.18.4-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.18.3-eksbuild.1
     compatibilities:
     - '1.34'
@@ -4147,6 +4177,14 @@
   publisher: dynatrace
 - name: eks-node-monitoring-agent
   versions:
+  - version: v1.4.3-eksbuild.2
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.4.2-eksbuild.1
     compatibilities:
     - '1.34'
@@ -4695,6 +4733,14 @@
   publisher: factorhouse
 - name: fluent-bit
   versions:
+  - version: v4.2.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v4.2.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -4704,6 +4750,14 @@
     - '1.30'
     - '1.29'
     - '1.28'
+  - version: v4.1.2-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v4.1.1-eksbuild.1
     compatibilities:
     - '1.34'
@@ -6079,6 +6133,14 @@
   publisher: eks
 - name: kube-state-metrics
   versions:
+  - version: v2.17.0-eksbuild.6
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.17.0-eksbuild.5
     compatibilities:
     - '1.34'
@@ -6533,6 +6595,14 @@
   publisher: Nirmata
 - name: prometheus-node-exporter
   versions:
+  - version: v1.10.2-eksbuild.6
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.10.2-eksbuild.5
     compatibilities:
     - '1.34'
