--- a/static/compatibilities/vector.yaml
+++ b/static/compatibilities/vector.yaml
@@ -123,7 +123,16 @@ versions:
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: [Vector v0.43.0 release notes not included in the provided text beyond
+        a packaging/asset change; no concrete new runtime features can be extracted
+        from what was pasted.]
+    breaking_changes: ['The `vector-0.43.0-x86_64-apple-darwin.tar.gz` release asset
+        was removed (per #22129). If you rely on that specific macOS Intel tarball
+        for installs or CI artifacts, you must switch to another supported artifact
+        (e.g., a different archive format/target, Homebrew, or container image).']
   chart_version: 0.38.0
   images: ['timberio/vector:0.43.0-distroless-libc']
 - version: 0.42.0
