--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -3,21 +3,14 @@ git_url: https://github.com/argoproj/argo-cd
 release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
 versions:
-- version: 3.2.2
+- version: 3.2.3
   kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
-  summary:
-    helm_changes: ''
-    chart_updates: [Bumped bundled Kubernetes dependency from v1.34.0 to v1.34.2 (via
-        Argo CD and gitops-engine dependency updates)., Updated gitops-engine to a
-        build that includes Kubernetes 1.34.2 and a nil pointer fix (internal dependency
-        change).]
-    features: []
-    breaking_changes: []
-  chart_version: 9.2.0
+  summary: null
+  chart_version: 9.2.1
   images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
-    'quay.io/argoproj/argocd:v3.2.2']
+    'quay.io/argoproj/argocd:v3.2.3']
 - version: 3.2.1
   kube: ['1.35', '1.34', '1.33']
   requirements: []
