--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -2317,6 +2317,14 @@
   publisher: eks
 - name: aws-fsx-csi-driver
   versions:
+  - version: v1.8.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.7.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -6755,6 +6763,14 @@
   publisher: rafay-systems
 - name: snapshot-controller
   versions:
+  - version: v8.4.0-eksbuild.3
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v8.3.0-eksbuild.1
     compatibilities:
     - '1.34'
